refactor: Improve navigation and scrolling
This commit refactors the navigation and scrolling functionality across the application.

The README has been updated with the correct AI Studio app URL.
The Navbar now supports scrolling to different sections like 'home' and 'help', and its `setView` prop has been adjusted accordingly.
The Hero section now includes a `scrollToDownload` function for smooth scrolling to the download section.
The Footer component has been updated to include scrolling functionality to the top and to specific sections, removing the redundant `setView` prop.
The About component has received minor styling adjustments and content updates.
The main App component has removed unnecessary state for `currentView` as navigation is now handled via scrolling.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
       :root {
-        --bg-color: #fdfbf7;
+        --bg-color: #94c3e0;
         --accent-green: #2d3a1a;
         --accent-orange: #d37628;
+        --title-color: #fcf0da;
       }
       body {
         font-family: 'Outfit', sans-serif;
         background-color: var(--bg-color);
+      }
+      .arial-black {
+        font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
       }
       .grain-bg {
         position: fixed;
@@ -60,6 +64,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="text-slate-800 antialiased selection:bg-[#d37628]/20 selection:text-[#d37628]">
     <div class="grain-bg"></div>
